Setup LWJGL